# C-compiler-

./: .gitignore  CMakeLists.txt  CMakePresets.json  Preprocess.cpp  Preprocess.h  README.md  SyntexError.h  main  main.cpp  package.json  pnpm-lock.yaml  sourceFileHandler.cpp  sourceFileHandler.h
FinalProjectYoelAndNeta/: CMakeLists.txt  CMakePresets.json  output.ll
FinalProjectYoelAndNeta/Header/: CompilationErrors.h  Constants.h  Constents.h  Conversion.h  ExprAST.h  Helper.h  KaleidoscopeJIT.h  Parser.h  Preprocess.h  STable.h  SymbalTable.h  SymbolTable.h  SyntaxAnalysis.h  SyntexAnalysis.h  SyntexError.h  Token.h  Tokenizer.h  TopLevelParser.h  sourceFileHandler.h
FinalProjectYoelAndNeta/cpp/: Conversion.cpp  ExprAST.cpp  FinalProjectYoelAndNeta.cpp  Helper.cpp  Parser.cpp  Preprocess.cpp  STable.cpp  SymbalTable.cpp  SymbolTable.cpp  SyntaxAnalysis.cpp  SyntexAnalysis.cpp  Tokeniser.cpp  TopLevelParser.cpp  sourceFileHandler.cpp
FinalProjectYoelAndNeta/testFiles/: main.c  testFile.c
IDE/: package-lock.json  package.json
IDE/C-Compiler-IDE-0-2/C-IDE/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
IDE/C-Compiler-IDE-0-2/C-IDE/scripts/: start-dev.js
IDE/C-Compiler-IDE-0-2/C-IDE/src/: AES.tsx  App.tsx  Compile.tsx  DisplayManager.tsx  Editor.tsx  FileContentContext.tsx  FileEventsHandler.tsx  FileExplorer.tsx  FileExplorerProvider.tsx  FileManager.tsx  HostLiveShare.tsx  JoinLiveShare.tsx  Tabs.tsx  Terminal.tsx  TerminalManager.tsx  TerminalProvider.tsx  Toolbar.tsx  main.tsx
IDE/C-Compiler-IDE-0-2/C-IDE/src-tauri/: Cargo.toml  tauri.conf.json
IDE/C-Compiler-IDE-0-2/C-IDE/src-tauri/capabilities/: default.json
IDE/C-Compiler-IDE-0-2/C-IDE/src-tauri/src/: lib.rs  main.rs
IDE/C-Compiler-IDE-0-2/C-IDE/src/styles/: App.css  Editor.css  FileExplorer.css  Tabs.css  Terminal.css  Toolbar.css
IDE/C-Compiler-IDE/C-IDE/: pnpm-lock.yaml
IDE/C-Compiler-IDE/C-IDE/src/: FileEventsHandler.tsx
IDE/C-Compiler-IDE/C-IDE/src-tauri/: Cargo.toml  tauri.conf.json
IDE/C-Compiler-IDE/C-IDE/src/styles/: App.css  Editor.css  Toolbar.css
IDE/C-Compilter-IDE/: Cargo.toml  Dioxus.toml
IDE/C-Compilter-IDE/src-tauri/: Cargo.toml  tauri.conf.json
IDE/C-Compilter-IDE/src-tauri/src/: main.rs
LLVMPOC/: Asm.cpp  Asm.h  BinaryOperationNode.cpp  BinaryOperationNode.h  CMakeLists.txt  ConstentNode.cpp  ConstentNode.h  Constents.h  INode.cpp  INode.h  IntConstantNode.cpp  IntConstantNode.h  IntConstentNode.cpp  IntConstentNode.h  LLVMHelper.cpp  LLVMHelper.h  LLVMPOC.cpp  LLVMPOC.h  Optimiser.cpp  Optimiser.h  ParseToAst.cpp  ParseToAst.h  SyntaxError.h  SyntexAnalysis.cpp  SyntexAnalysis.h  Tokenizer.cpp  Tokenizer.h  expression.txt
LiveShare/: PacketCodes.js
LiveShare/Client/: Client.js  client.html  main.js
LiveShare/Server/: Chnages.js  ClientCommunicater.js  Server.js  main.js  package-lock.json  server.html
POC/: AST.cpp  AST.h  Asm.cpp  Asm.h  Constents.h  Directory.build.props  INode.cpp  INode.h  Optimiser.cpp  Optimiser.h  POC.sln  POC.vcxproj  POC.vcxproj.filters  ParseToAst.cpp  ParseToAst.h  SyntaxError.h  SyntexAnalysis.cpp  SyntexAnalysis.h  Tokenizer.cpp  Tokenizer.h  expression.txt  main.cpp  packages.config
Preprocessor/: Preprocess.h
planning/: POC Planning.docx
testFiles/: testFile.c
